<resources>
    <string name="app_name">With_Runn</string>
    <string name="my_page">마이페이지</string>
    <string name="map">지도</string>
    <string name="course">산책코스</string>
    <string name="friend">친구</string>
    <string name="more_arrow">더보기 화살표</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_searchbox_map">장소를 입력하세요</string>
    <string name="backButton">뒤로가기</string>
    <string name="recent_search">최근 검색</string>
    <string name="exclude_closed">영업종료 제외</string>
    <string name="place_service_available">영업중</string>
    <string name="place_service_inavailable">영업 종료</string>
    <string name="park_able">주차 가능</string>
    <string name="park_inable">주차 불가능</string>
    <string name="connect_pin">핀 연결</string>
    <string name="pin_name">핀 이름</string>
    <string name="hint_pin_name">핀 이름을 입력해주세요</string>
    <string name="pin_info">핀 설명</string>
    <string name="hint_pin_info">핀 정보를 입력해주세요</string>
    <string name="choose_color">색상 선택</string>
    <string name="cancel">취소</string>
    <string name="hint_add_pin">지도를 터치해 핀을 생성하세요</string>
    <string name="course_info">산책코스 소개</string>
    <string name="scrap">북마크</string>
    <string name="like">좋아요</string>
    <string name="share">공유하기</string>
    <string name="estimated_time">소요 시간</string>
    <string name="create_course">경로 생성</string>
    <string name="save_course">경로 저장</string>

    <!-- Google OAuth Web Client ID -->
    <string name="server_client_id">
        454627148187-mlrare2413hsb4784r6n4lbteo21h635.apps.googleusercontent.com
    </string>
</resources>