<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="41dp"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingHorizontal="18dp"
        android:paddingVertical="17dp">
        <ImageButton
            android:id="@+id/back_btn"
            android:layout_width="32dp"
            android:layout_height="32dp"

            android:clickable="true"
            android:focusable="true"

            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_back_32"
            android:contentDescription="@string/backButton"
            app:tint="@color/gray_500"
            />
        <EditText
            style="@style/Text_Pretendard_Regular_12"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="14dp"
            android:hint="@string/hint_searchbox_map"
            android:background="@android:color/transparent"
            android:textColor="@color/gray_950"
            android:textColorHint="@color/gray_500"
            android:textSize ="14sp"/>
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_200"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:layout_marginTop="24dp"
        android:layout_marginHorizontal="18dp">
        <TextView
            style="@style/Text_Pretendard_Regular_12"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:text="@string/recent_search"
            android:textColor="@color/gray_600"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recent_search_rcv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            />
    </LinearLayout>
</LinearLayout>