<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.gms.maps.MapView
        android:id="@+id/map_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/gray_050"
        android:layout_gravity="top">
        <View
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:backgroundTint="@color/gray_050"
            android:layout_gravity="top"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="18dp"
            android:paddingVertical="12dp"
            android:gravity="center_vertical">
            <ImageButton
                android:id="@+id/back_btn"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_arrow_back_32"
                app:tint="@color/gray_700"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/bottom_sheet_behaviour"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_home_indicator"
        android:orientation="vertical"
        android:elevation="8dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
        <LinearLayout
            android:id="@+id/bottom_sheet_handle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingTop="8dp"
            android:paddingBottom="21dp">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_home_indicator"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/course_detail_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">
            <LinearLayout
                android:id="@+id/course_simple_info"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">

                <ImageView
                    android:id="@+id/course_image"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:background="@drawable/bg_place_image"
                    android:src="@drawable/img_sample_place"
                    android:clipToOutline="true"
                    android:scaleType="centerCrop"
                    android:layout_marginEnd="12dp"/>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="8dp"
                    android:orientation="vertical"
                    android:layout_marginTop="8dp"
                    android:gravity="center_vertical">
                    <TextView
                        android:id="@+id/course_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"

                        style="@style/Text_Pretendard_Medium_16"
                        android:text="코스 이름입니다"
                        android:textColor="@color/gray_950"/>

                    <LinearLayout
                        android:id="@+id/tag_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:orientation="horizontal"
                        android:gravity="center_vertical">

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="16dp">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"

                    style="@style/Text_Pretendard_Medium_14"
                    android:text="@string/course_info"
                    android:textColor="@color/gray_500"
                    android:textSize="12sp"/>

                <TextView
                    android:id="@+id/course_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    style="@style/Text_Pretendard_Medium_14"
                    android:text="산책 코스 정보입니다!"
                    android:textColor="@color/gray_950"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="50dp"
                android:gravity="center">
                <LinearLayout
                    android:id="@+id/btn_scrap"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:orientation="vertical"
                    android:background="@drawable/bg_place_image"
                    android:backgroundTint="@color/gray_300"
                    android:padding="8dp"
                    android:gravity="center"
                    android:clickable="true"
                    android:focusable="true">
                    <ImageView
                        android:id="@+id/bookmark_ic"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:src="@drawable/ic_bookmark_outlined"
                        app:tint="@color/green_700"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        style="@style/Text_Pretendard_Regular_12"
                        android:text="@string/scrap"
                        android:textColor="@color/gray_950"/>
                </LinearLayout>
                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <LinearLayout
                    android:id="@+id/btn_like"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:orientation="vertical"
                    android:background="@drawable/bg_place_image"
                    android:backgroundTint="@color/gray_300"
                    android:padding="8dp"
                    android:gravity="center"
                    android:clickable="true"
                    android:focusable="true">
                    <ImageView
                        android:id="@+id/like_ic"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:src="@drawable/ic_heart_outlined"
                        app:tint="@color/red_500"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"

                        style="@style/Text_Pretendard_Regular_12"
                        android:text="@string/like"
                        android:textColor="@color/gray_950"/>
                </LinearLayout>
                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>
                <LinearLayout
                    android:id="@+id/btn_share"
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:orientation="vertical"
                    android:background="@drawable/bg_place_image"
                    android:backgroundTint="@color/gray_300"
                    android:padding="8dp"
                    android:gravity="center"
                    android:clickable="true"
                    android:focusable="true">
                    <ImageView
                        android:id="@+id/share_ic"
                        android:layout_width="26dp"
                        android:layout_height="26dp"
                        android:src="@drawable/ic_share"
                        app:tint="@color/gray_800"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        style="@style/Text_Pretendard_Regular_12"
                        android:text="@string/share"
                        android:textColor="@color/gray_950"/>
                </LinearLayout>
                <View
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"/>

                <LinearLayout
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:orientation="vertical"
                    android:background="@drawable/bg_place_image"
                    android:backgroundTint="@color/gray_300"
                    android:padding="8dp"
                    android:gravity="center"
                    android:clickable="true"
                    android:focusable="true">
                    <TextView
                        android:id="@+id/estimated_time"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"

                        style="@style/Text_Pretendard_Medium_16"
                        android:text="40M"
                        android:textSize="20sp"
                        android:textColor="@color/blue_500"
                        android:textStyle="bold"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="1"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"

                        style="@style/Text_Pretendard_Regular_12"
                        android:text="@string/estimated_time"
                        android:textColor="@color/gray_950"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
